# LearnGenAI

./: .gitignore  pyproject.toml
test_adk_gemini/: agent.py
test_adk_vertexai/: agent.py
test_langchain/: gitloader.py  lcel.ipynb  lcel1.py  lcel2.py
test_langgraph/: graph.py
test_mcp/python-mcp-server/: pyproject.toml
test_openai/: chat.py  function_calling.py
